Bug fix- Posts skeleton showing improperly in dark mode

--- a/src/features/Post/Post.css
+++ b/src/features/Post/Post.css
@@ -153,7 +153,7 @@ button {
     width: 30%;
     height: auto;
     border-radius: 10px;
-    margin: 0 1.5%;
+    margin: 1.5%;
 }
 
 .gallerySmall,
@@ -293,6 +293,7 @@ button {
     padding-right: 0;
     display: flex;
     align-items: center;
+    flex-direction: column;
 }
 
 .error {
